[Add] alacritty config file

--- a/myinstall/Makefile
+++ b/myinstall/Makefile
@@ -2,7 +2,7 @@ OS_ID := $(shell grep -oP '(?<=^ID=).+' /etc/os-release | tr -d '"')
 
 .PHONY: all install-pkgs setup-configs
 
-all: install-pkgs setup-configs
+all: install-pkgs install-uv
 
 install-pkgs:
 	ifeq ($(OS_ID), arch)
@@ -11,6 +11,6 @@ install-pkgs:
 		sudo apt update && sudo apt install -y $$(cat pkglist_ubuntu.txt)
 	endif
 
-setup-configs:
-	echo 'Hi'
+install-uv:
+	curl -LsSf https://astral.sh/uv/install.sh | sh
 
