--- a/.config/i3/config
+++ b/.config/i3/config
@@ -180,14 +180,16 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
-# assign [class="firefox"] $ws2
-# assign [class="Google-chrome"] $ws2
+assign [class="firefox"] $ws2
+assign [class="Zotero"] $ws3
 assign [class="Discord"] $ws9
 # assign [class="xpad"] $ws8
 for_window [class=".*"] [floating] move absolute position center
 for_window [class="xpad"] floating enable move to workspace $ws9
 for_window [class="SFML"] floating enable
 for_window [class="matplotlib"] floating enable
+
+# gaps inner 5 px
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -249,7 +251,6 @@ bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-, exec p
 bindsym $mod+shift+d exec nautilus --new-window
 
 # bindsym $mod+shift+x exec i3lock --nofork --color 000000 -e && systemctl suspend
-bindsym $mod+x exec i3lock --nofork --color 000000 -e
 bindsym $mod+shift+x exec systemctl suspend
 # bindsym $mod+d exec --no-startup-id "rofi -show drun"
 
@@ -265,12 +266,11 @@ bar {
         status_command i3blocks
         position top
         colors {
-          background $taskbar-color
-          separator $border-color
-        #                   border          background          text
-        focused_workspace   $gold-color   $bg-color           $gold-color
-        inactive_workspace  $border-color   $inactive-bg-color  $inactive-text-color
-        urgent_workspace    $border-color   $urgent-bg-color    $text-color      
+			background $taskbar-color
+			separator $border-color
+			focused_workspace   $gold-color		$bg-color           $gold-color
+			inactive_workspace  $border-color   $inactive-bg-color  $inactive-text-color
+			urgent_workspace    $border-color   $urgent-bg-color    $text-color      
         }
 }
 
